--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@
 
     <div class="section2-part2">
       <div class="col-sm-3" >
-        <img id="images2" src="images/vallamkali.jpg"  alt="image">
+        <img id="images2" src="img/vallamkali.jpg"  alt="image">
       </div>
 
       <div class="col-sm-3" >
-        <img id="images2" src="images/wayanad.jpg" alt="image">
+        <img id="images2" src="img/wayanad.jpg" alt="image">
       </div>
 
       <div class="col-sm-3" >
@@ -154,7 +154,7 @@
       </div>
 
       <div class="col-sm-3" >
-        <img id="images2" src="images/waterfall.jpg" alt="image">
+        <img id="images2" src="img/waterfall.jpg" alt="image">
       </div>
     </div>
   </div>
