--- a/kasaragod.html
+++ b/kasaragod.html
@@ -50,7 +50,7 @@
             </div>
       
             <div class="card col-lg-3" style="width: 18rem;">
-              <img src="img/ksd-img4.jpg" class="card-img-top"style="height: 300px;" alt="Kottancheri Hill Station">
+              <img src="img/kzd-img4.jpg" class="card-img-top"style="height: 300px;" alt="Kottancheri Hill Station">
               <div class="card-body" style="text-align: center;">
                 <h5 class="card-title">Kottancheri Hill Station</h5>   
               </div>
